fixed overflow

--- a/src/Components/Project/ProjectCSS.css
+++ b/src/Components/Project/ProjectCSS.css
@@ -43,7 +43,7 @@
 }
 
 .project-text {
-  width: 70%;
+  width: 80%;
   text-align: center;
   padding: 25px 0;
 }
